log/build_2025-02-10_19-32-54/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/hw_interface.py", line 55
    int test = 2
        ^^^^
SyntaxError: invalid syntax

